Page : add menu bar with tutorials list

--- a/mongo.html
+++ b/mongo.html
@@ -19,10 +19,18 @@
   </header>
 </div>
 
+<div class="tutorials">
+  <ul>
+    <li><a href="http://gregmak.github.com">Acceuil.</a></li>
+    <li><a href="http://gregmak.github.com/rest.html">Création d'un web-service <strong>RESTful</strong>.</a></li>
+    <li><a href="http://gregmak.github.com/dom.html">Manipulation du <strong>DOM</strong>.</a></li>
+    <li><a href="http://gregmak.github.com/mongo.html">Persistance avec <strong>MongoDB</strong>.</a></li>
+    </ul>
+  </div>
+
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
   <section id="main_content" class="inner">
-  <h2>Persistance avec MongoDB.</h2>
 
 <p>Nous allons voir dans ce tutoriel comment gérer la persistance en <strong>Opa</strong> via l'utilisation d'une base de données NoSQL : <strong>MongoDB</strong>.
 Pour ce faire nous allons reprendre l'application ecrite précédamment et nous allons la modifier pour que les <em>snippets</em> créés soient stockés dans une base de données plutôt qu'en RAM.</p>
