--- a/rest.html
+++ b/rest.html
@@ -19,10 +19,18 @@
   </header>
 </div>
 
+<div class="tutorials">
+  <ul>
+    <li><a href="http://gregmak.github.com">Acceuil.</a></li>
+    <li><a href="http://gregmak.github.com/rest.html">Création d'un web-service <strong>RESTful</strong>.</a></li>
+    <li><a href="http://gregmak.github.com/dom.html">Manipulation du <strong>DOM</strong>.</a></li>
+    <li><a href="http://gregmak.github.com/mongo.html">Persistance avec <strong>MongoDB</strong>.</a></li>
+  </ul>
+</div>
+
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
   <section id="main_content" class="inner">
-  <h2>Création d'un web-service <strong>RESTful</strong>.</h2>
 
   <p>Le premier de ces tutoriels portera sur la gestion en <strong>Opa</strong> des requêtes HTTP de type <strong>REST</strong> et permettra de comparer <strong>Opa</strong> avec <strong>Express.js</strong>, framework facilitant le développement de services <strong>RESTful</strong> en JavaScript.</p>
 
