--- a/dom.html
+++ b/dom.html
@@ -19,10 +19,18 @@
   </header>
 </div>
 
+<div class="tutorials">
+  <ul>
+    <li><a href="http://gregmak.github.com">Acceuil.</a></li>
+    <li><a href="http://gregmak.github.com/rest.html">Création d'un web-service <strong>RESTful</strong>.</a></li>
+    <li><a href="http://gregmak.github.com/dom.html">Manipulation du <strong>DOM</strong>.</a></li>
+    <li><a href="http://gregmak.github.com/mongo.html">Persistance avec <strong>MongoDB</strong>.</a></li>
+  </ul>
+</div>
+
 <!-- MAIN CONTENT -->
 <div id="main_content_wrap" class="outer">
   <section id="main_content" class="inner">
-  <h2>Manipulation du DOM.</h2>
 
   <p>Nous allons voir dans ce tutoriel comment manipuler le DOM en <strong>Opa</strong>.
   Pour ce faire nous allons reprendre l'application ecrite précédamment et nous allons la modifier pour :</p>
