Page : fix footer display

--- a/dom.html
+++ b/dom.html
@@ -312,6 +312,8 @@ Vous voyez que la page affiche déjà les 3 <em>snippets</em> qu'on a créé au 
   <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
   </footer>
 </div>
+</section>
+</div>
 
 </body>
 </html>
