--- a/rest.html
+++ b/rest.html
@@ -529,6 +529,7 @@ Ouvrez un navigateur internet, ouvrez la console JavaScript et entrez les comman
     <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
     </footer>
   </div>
+  </section>
 
   </body>
   </html>
