Page : display Warning title in red

--- a/mongo.html
+++ b/mongo.html
@@ -152,7 +152,7 @@ Nous voulons manipuler ces <em>snipets</em> sous forme de liste donc nous transf
 <p>La méthode pour récupérer un <em>snippet</em> particulier prend en plus l'identifiant du <em>snippet</em> recherché.
 Cette méthode va chercher dans l'ensemble des <em>snippets</em> et applique la continuation sur le <em>snippet</em> ayant l'identifiant recherché.</p>
 
-<h6>Attention !!!</h6>
+<div class="alert"><h6>Attention !!!</h6></div>
 
 <p>Chaque chemin d'une déclaration de base de données est associée à une valeur par défaut.
 Si aucune donnée n'est sotckée au chemin indiqué, la valeur par défaut associée à ce chemin sera retournée.
