Page : fix typo

--- a/rest.html
+++ b/rest.html
@@ -41,7 +41,7 @@
 
   <p>Vous devez bien sûr installer <strong>Opa</strong>, téléchargeable directement depuis le site d'<a href="http://opalang.org">opalang</a>, ou depuis le <a href="https://github.com/MLstate/opalang">repo github d'opalang</a>.</p>
 
-  <p>Uns fois <strong>Opa</strong> téléchargé et installé, vous devriez avoir tout ce dont vous avez besoin. Il n'y a pas d'autres dépendances à installer (<strong>Node.js</strong> étant automatiquement installé par <strong>Opa</strong> s'il n'est pas détecté durant la phase de configuration).</p>
+  <p>Une fois <strong>Opa</strong> téléchargé et installé, vous devriez avoir tout ce dont vous avez besoin. Il n'y a pas d'autres dépendances à installer (<strong>Node.js</strong> étant automatiquement installé par <strong>Opa</strong> s'il n'est pas détecté durant la phase de configuration).</p>
 
   <h4>Le squelette de l'application.</h4>
 
